# Python_Code

./: .gitignore  Bitcoin Annualized Volatility Calculator.py  Bitcoin Loan Risk Calculator.py  bike-calculator-html-complete.html  git_test.py  watt_speed_to_slope.html
Work/: text.py
Work/SSB/: .gitignore  A_PLUS.py  A_PLUS.spec  Environment Setting ReadMe.txt  ReadMe.txt  pyproject.toml
Work/SSB/Resource/: Common.robot
Work/SSB/Script/: Auto_Ride.robot  Motor_Full_Speed.robot  Motor_Low_Speed.robot  Motor_Run_Check_Current.robot  Motor_Run_Check_Speed.robot  Power_Off.robot  Power_On.robot  Push_Bike.robot  Turn_Light_ON.robot  Up_and_Down.robot
class/: course11.ipynb  course4.ipynb  (+6 more)
python_personal/: AES Encryption with Key and IV Example.py  BikeModelCreateTool.py  EC.xlsx  Finance.py  First and Second Oder Filter Comparison.py  First-Order lag filter.py  Math Test.py  Person_Accounting.py  Taylor.py  Three-Asset Portfolio Optimization (Taiwan 0050, Bitcoin, S&P 500).py  app.py  cadence_test.py  error_table.txt  excel parser.py  export.xlsx  filter compare.py  pyproject.toml  requirements.txt  risk.py
python_personal/ConsoleApp1/: ConsoleApp1.sln  Program.cs
python_personal/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.sln  ConsoleApplication1.vcxproj
python_personal/Fliter Demo/: requirements.txt
python_personal/Fliter_Demo/: app.py
python_personal/WindowsFormsApp1/: Form1.Designer.cs  Form1.cs  Program.cs  WindowsFormsApp1.csproj  WindowsFormsApp1.sln  WindowsFormsApp1_TemporaryKey.pfx
python_personal/WindowsFormsApp1/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
side_project_/: lunch.py  pyproject.toml
(+134 files in other folders)
