[tool.poetry]
name = "python-project"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10 < 3.13"
numpy = "1.24.4"
pandas = "2.0.3"
openpyxl = "3.1.2"
pyserial = "3.5"
pyyaml = "6.0.1"
python-dateutil = "2.8.2"
pytz = "2023.3.post1"
tzdata = "2023.3"
plotly = "^6.0.0"
matplotlib = "^3.10.0"
streamlit = "^1.42.2"

[tool.poetry.group.dev.dependencies]
pyinstaller = "6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"