[tool.poetry]
name = "side-project-"
version = "0.1.0"
description = ""
authors = ["ChrisLee <chrislee@hyenatek.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.28.0"
schedule = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
